Saturday Night Edits 3

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link href="index2.css" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
 </head>
 <body>
     
@@ -14,15 +13,15 @@
     <h2>It's X's Turn!</h2>
     <h3>It's Y's turn!</h3>
     <div id="board">
-        <div data-index="1" class="tile right-border bottom-border"></div>
-        <div data-index="2" class="tile right-border bottom-border"></div>
-        <div data-index="3" class="tile bottom-border"></div>
-        <div data-index="4" class="tile right-border bottom-border"></div>
+        <div data-index="1" class="tile right-border bottom-border top-border left-border"></div>
+        <div data-index="2" class="tile right-border bottom-border top-border"></div>
+        <div data-index="3" class="tile bottom-border right-border top-border"></div>
+        <div data-index="4" class="tile right-border bottom-border left-border"></div>
         <div data-index="5" class="tile right-border bottom-border"></div>
-        <div data-index="6" class="tile bottom-border"></div>
-        <div data-index="7" class="tile right-border"></div>
-        <div data-index="8" class="tile right-border"></div>
-        <div data-index="9" class="tile"></div>
+        <div data-index="6" class="tile right-border bottom-border"></div>
+        <div data-index="7" class="tile right-border bottom-border left-border"></div>
+        <div data-index="8" class="tile right-border bottom-border"></div>
+        <div data-index="9" class="tile right-border bottom-border"></div>
         <div id="strike" class="strike"></div>
     </div>
     <div id="game-over-area" class="hidden">
