--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
     
     <h1>Tic-Tac-Toe</h1>
     <h2>It's X's Turn!</h2>
-    <h3>It's Y's turn!</h3>
+    <h3>It's O's turn!</h3>
     <div id="board">
         <div data-index="1" class="tile right-border bottom-border top-border left-border"></div>
         <div data-index="2" class="tile right-border bottom-border top-border"></div>
